Attempt fix stretchy image

--- a/app/webpack/styles/modules/images.scss
+++ b/app/webpack/styles/modules/images.scss
@@ -12,16 +12,6 @@
   object-fit: cover;
 }
 
-.tb-profile-image-wraper {
-  width: 100px;
-  height: 100px;
-
-  .tb-profile-image {
-    width: 100%;
-    height: 100%;
-  }
-}
-
 .tb-profile-image--camera {
   position: absolute;
   top: 85px;
